--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,8 @@
 * {
   padding: 0;
   margin: 0;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
 .clearfix:after {
@@ -10,22 +12,60 @@
 }
 
 
-/********************Announcement********************/
+/*================================================
+ Announcement
+==================================================*/
 
-article.announcement {
+li.announcement {
   display: flex;
   flex-direction: row;
   align-items: center;
+  border-bottom: 1px solid rgb(193, 193, 193);
+  padding: 10px;
 }
 
-article.announcement div.dot {
+li.announcement:last-child {
+  border-bottom: none;
+}
+
+li.announcement div.dot {
   height: 20px;
   width: 20px;
-  margin: auto 0;
+  flex-shrink: 0;
   border-radius: 10px;
 }
 
-article.announcement > div:nth-child(2) {
+li.announcement> div:nth-child(2) {
   margin-left: 10px;
+  margin-right: 10px;
 }
-/********************Announcement-End********************/
+
+li.announcement> div:nth-child(2) p {
+  text-align: justify;
+}
+
+li.announcement> p.date {
+  margin-left: auto;
+  text-align: right;
+  flex-shrink: 0;
+  font-size: 0.8em;
+  align-self: flex-start;
+  font-weight: lighter;;
+  color: rgb(161, 161, 161);
+}
+
+
+/*================================================
+ AnnouncementList
+==================================================*/
+
+section.announcement-list {
+  border: 5px solid rgb(52, 75, 143);
+  border-radius: 15px;
+  background-color: rgba(226, 229, 232, 0.88);
+}
+
+section.announcement-list> h1 {
+  text-align: center;
+  color: rgb(53, 87, 144);
+}
