--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -508,7 +508,7 @@ footer .legal {
 ==================================================*/
 
 aside.announcement-container {
-  width: 30%;
+  min-width: 30%;
   /*margin-top: -30px;*/
 }
 
