--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -58,6 +58,7 @@ li.announcement>div>h4 {
   flex-grow: 1;
   color: #fa7014;
   font-size: 1.02em;
+  text-transform: capitalize;
 }
 
 li.announcement>div>.date {
@@ -384,6 +385,7 @@ li.event-item article.container .text {
 li.event-item article.container .text h4 {
   font-size: 1.4em;
   margin-bottom: 10px;
+  text-transform: capitalize;
 }
 
 li.event-item article.container .text p {
@@ -508,7 +510,7 @@ footer .legal {
 ==================================================*/
 
 aside.announcement-container {
-  min-width: 30%;
+  max-width: 30%;
   /*margin-top: -30px;*/
 }
 
